# pygame-duck-hunt

./: main.py  pyproject.toml
